k8s/event-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  labels:
    app: event-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: pumpkinlyd/gigspot-event:latest
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /events/health
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
spec:
  selector:
    app: event-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
